# Gemini-Bible

./: .gitignore  README.md  app.sh  findings.md
backend/: README.md  pyproject.toml
backend/app/: auth.py  main.py  metrics.py  practices.py  pricing.py  registry.py  runner.py  tune.py
backend/practices/: image-generation.yaml  prompting-2x.yaml  prompting-3x.yaml  structured-output.yaml
backend/tests/: conftest.py  test_practices_catalog.py  test_practices_endpoint.py  test_samples_knob_presence.py  test_samples_smoke.py  test_samples_surface_parity.py  test_tune_diff_apply.py  test_tune_endpoint.py  test_tune_estimate.py  test_tune_judge.py  test_tune_pipeline.py
docs/superpowers/specs/: 2026-05-03-prompt-tuning-design.md  2026-05-03-sample-quality-sweep-design.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  main.tsx
frontend/src/data/: catalog.ts  insights.ts
frontend/src/routes/: Browser.tsx  Calculator.tsx  Home.tsx  Practices.tsx  Tune.tsx  Workspace.tsx
frontend/src/state/: auth.ts  calculator.ts  metricsStore.ts  pricing.ts  route.ts  run.ts  samples.ts  theme.ts  tune.ts
frontend/src/styles/: tokens.css
frontend/src/ui/: Slides.tsx  motion.ts
samples/embeddings/basic/: manifest.json
samples/image/nano-banana/: manifest.json
samples/live/text-roundtrip/: manifest.json
samples/music/lyria/: manifest.json
samples/speech/tts-multi/: manifest.json
samples/speech/tts-single/: manifest.json
scripts/: start.sh  stop.sh
(+62 files in other folders)
