[project]
name = "gemini-bible-backend"
version = "0.1.0"
description = "Gemini Bible — sample registry, executor, and usage telemetry."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "google-genai>=1.0",
    "google-auth>=2.35",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
